ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
/* ... */
@media screen and (max-width: $breakpointMobile) {
  .centrePage header {
    min-height: initial !important;
    .container-content {
    }
    > div.container-content:first-child {
      padding-top: 0;
    }
    > div:last-child {
      padding-bottom: 1.5rem;
    }
  }

  .container .container-content .container .container-content {
    div.aem.rte {
      p:first-child {
        margin-top: 1rem;
        margin-bottom: 2rem;
      }
    }
  }

  .partial-background header {
    &::after {
      bottom: -9.99rem;
      height: 10rem;
    }
  }

  div div.image_component {
    margin: 1rem 0rem !important;
    // width: 42.12rem !important;
    // max-width: 42.12rem !important;
    // min-width: 42.12rem !important;
  }

  div.twoCol div.container-content div.container.aem div.container-content,
  div.container.maxWidth.padding-bottom div.container-content div {
    div.image_component {
      width: unset !important;
      max-width: unset !important;
      min-width: unset !important;
    }
  }
}

.container .container-content .container .container-content {
  padding: 0;
}
.twoCol > .cmp-container > .container-content,
.twoCol > .container-content {
  display: flex;

  gap: 8rem;
}

.twoCol div.container-content {
  div.container.maxWidth.cmp-container {
    min-width: $colSize !important;
    max-width: $colSize !important;
    width: $colSize !important;
  }
}
.twoCol.smallRight
  > .cmp-container
  > .container-content
  > .container:nth-child(2),
.twoCol.smallLeft
  > .cmp-container
  > .container-content
  > .container:nth-child(1) {
  min-width: $colSize;
  max-width: $colSize;
}

.twoCol.smallRight
  > .cmp-container
  > .container-content
  > .container:nth-child(1),
.twoCol.smallLeft
  > .cmp-container
  > .container-content
  > .container:nth-child(2) {
  max-width: calc(100% - #{$colSize} - #{$gapSize});
  flex-grow: 1;
}
.offsetTop {
  transform: translateY(-10rem);
}
@media screen and (max-width: $breakpointMobile) {
  .container .container-content .container .container-content {
    .chip-container {
      display: block;

      .chip-button {
        margin: 0.5rem;
      }
    }
  }

  .twoCol.smallRight
    > .cmp-container
    > .container-content
    > .container:nth-child(1) {
    max-width: none;

    .container .container-content .container .container-content {
      .chip-container {
        display: block;

        .chip-button {
          margin: 0.5rem;
        }
      }
    }
  }

  .twoCol.smallRight
    > .cmp-container
    > .container-content
    > .container:nth-child(2) {
    min-width: 0;
    margin-top: 2rem;
  }
  .twoCol > .cmp-container > .container-content {
    gap: 0;

    flex-direction: column;
    > .container {
      width: 100%;
      min-width: 0;
    }
  }
  .offsetTop {
    transform: translateY(0);
  }

  .twoCol > .cmp-container > .container-content,
  .twoCol > .container-content {
    flex-direction: column;

    gap: 0;
  }

  .twoCol .container-content {
    .cmp-container {
      min-width: 0 !important;
      max-width: 100% !important;
      width: 100% !important;
    }
  }
}

div.linkedIcon.teasers {
  padding: 0 1.5rem;

  .teaser {
    padding: 0.75rem 0;
  }
}

